--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.8.0",
     "@walletconnect/web3-provider": "^1.8.0",
+    "firebase": "^9.9.3",
     "magic-sdk": "^9.0.0",
     "moralis": "^1.2.4",
     "next": "12.0.9",
